Fixed a bug, text was overflowing its container

--- a/public/styles/existing-tweets.css
+++ b/public/styles/existing-tweets.css
@@ -38,7 +38,9 @@ img.tweet-icons {
 }
 
 article.tweet h3 {
+  word-wrap: break-word;
   padding-left: 1.8em;
+  padding-right: 1.8em;
   padding-bottom: 1em;
 }
 
